--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@
   min-width: 300px;
   flex-direction: row;
   align-items: flex-start;
+  border-radius: 7px;
 }
 
 .user-details {
@@ -174,6 +175,7 @@
   padding: 15px;
   justify-content: space-between;
   gap: 10px;
+  border-radius: 5px;
 }
 
 .todos-details {
@@ -202,6 +204,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  border-radius: 5px;
 }
 
 .post-text {
